both div displaying correctly but not centered

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,10 +17,7 @@
   flex:1;
 }
 .terminal{
-    background: black;
-    color: white;
     font-family: monospace;
-    width: 20%;
     padding: 10px;
     font-size: 11px;
     height: 350px;
